--- a/contracts/package.json
+++ b/contracts/package.json
@@ -2,7 +2,10 @@
   "name": "hardhat-project",
   "scripts": {
     "compile": "npx hardhat compile",
-    "deploy": "npx hardhat run scripts/deploy.ts --network spicy"
+    "deploy": "npx hardhat run scripts/deploy.ts --network spicy",
+    "deploy-all": "npx hardhat run scripts/deploy-all.ts --network spicy",
+    "test-api": "npx hardhat run scripts/test-api.ts",
+    "debug-api": "npx hardhat run scripts/debug-api.ts"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^6.0.0",
