--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.2.0",
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.3",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
@@ -24,7 +25,9 @@
     "tailwind-merge": "^3.3.1",
     "three": "^0.178.0",
     "viem": "^2.31.7",
-    "wagmi": "^2.15.6"
+    "wagmi": "^2.15.6",
+    "touchsweep": "^2.2.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
