--- a/web/package.json
+++ b/web/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@react-three/drei": "^10.5.0",
     "@react-three/fiber": "^9.2.0",
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.3",
     "gsap": "^3.13.0",
@@ -22,12 +25,14 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.60.0",
     "tailwind-merge": "^3.3.1",
     "three": "^0.178.0",
-    "viem": "^2.31.7",
-    "wagmi": "^2.15.6",
     "touchsweep": "^2.2.0",
-    "uuid": "^11.1.0"
+    "tw-animate-css": "^1.3.5",
+    "uuid": "^11.1.0",
+    "viem": "^2.31.7",
+    "wagmi": "^2.15.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
