--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
