--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
+    "react-is": "^19.1.0",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
     "three": "^0.178.0",
