--- a/contracts/package.json
+++ b/contracts/package.json
@@ -9,7 +9,8 @@
     "test-api": "npx hardhat run scripts/test-api.ts",
     "debug-api": "npx hardhat run scripts/debug-api.ts",
     "update-stats": "npx hardhat run scripts/update-player-stats-cron.ts --network spicy",
-    "mongodb-registry": "npx hardhat run scripts/mongodb-registry.ts --network spicy"
+    "mongodb-registry": "npx hardhat run scripts/mongodb-registry.ts --network spicy",
+    "deploy-ticketing": "npx hardhat run scripts/deploy-ticketing.ts --network spicy"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.3.0",
