Enhance Football Game UI and Token Fetching Logic
- Integrated wallet connection to fetch player tokens dynamically based on the user's address.
- Improved error handling and loading states for token fetching.
- Updated player selection UI to display player positions and handle empty states.
- Refactored token data structure to accommodate additional player information.
- Added functionality to clear selected players from the game.

--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "next": "15.3.5",
     "pinata-web3": "^0.5.4",
     "pino-pretty": "^13.0.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
